Remove nh prefix from command line programs

--- a/tools/cross_validation/create_cross_validation_configs.ipynb
+++ b/tools/cross_validation/create_cross_validation_configs.ipynb
@@ -315,7 +315,7 @@
     "    Optionally supply a set of basins lists and/or a set of time splits, and this\n",
     "    function will create config files that implement a cross product of the basin (space)\n",
     "    and time splits. These config files are stored in `output_directory` and the\n",
-    "    `nh_run_scheduler.py` script in this library can be used to run the whole set.\n",
+    "    `run_scheduler.py` script in this library can be used to run the whole set.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
