--- a/tools/cross_validation/create_cross_validation_configs.ipynb
+++ b/tools/cross_validation/create_cross_validation_configs.ipynb
@@ -51,7 +51,7 @@
     "import re\n",
     "import shutil\n",
     "from tqdm.notebook import tqdm\n",
-    "from typing import Dict, Optional"
+    "from typing import Optional"
    ]
   },
   {
