Use builtin `| None` instead of `Optional[]`.

--- a/tools/cross_validation/create_cross_validation_configs.ipynb
+++ b/tools/cross_validation/create_cross_validation_configs.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "928c49b1-fdff-4d63-9915-c09d1b47e88e",
    "metadata": {},
    "outputs": [],
@@ -50,8 +50,7 @@
     "from pathlib import Path\n",
     "import re\n",
     "import shutil\n",
-    "from tqdm.notebook import tqdm\n",
-    "from typing import Optional"
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -299,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "657f4635-ded4-41cb-b40b-5defbb2f8008",
    "metadata": {},
    "outputs": [],
@@ -307,8 +306,8 @@
     "def create_cross_validation_config_files(\n",
     "    base_config_path: Path, \n",
     "    output_dir: Path,\n",
-    "    basin_lists: Optional[dict[str, dict[str, Path]]] = None,\n",
-    "    time_splits: Optional[dict[str, dict[str, list[str]]]] = None\n",
+    "    basin_lists: dict[str, dict[str, Path]] | None = None,\n",
+    "    time_splits: dict[str, dict[str, list[str]]] | None = None\n",
     "):\n",
     "    \"\"\"Create configs for spatiotemporal cross validation splits.\n",
     "\n",
@@ -323,9 +322,9 @@
     "        Path to a base config file (.yml)\n",
     "    output_dir : Path \n",
     "        Path to a folder where the generated configs will be stored\n",
-    "    basin_splits: Optional[dict[str, dict[str, list[str]]]]\n",
+    "    basin_splits: dict[str, dict[str, list[str]]] | None\n",
     "    \n",
-    "    time_splits: Optional[dict[str, dict[str, list[str]]]]\n",
+    "    time_splits: dict[str, dict[str, list[str]]] | None\n",
     "        \n",
     "    \"\"\"\n",
     "    # since the output directory is intended to represent one cross-validation experiment, \n",
