--- a/tools/cross_validation/create_cross_validation_configs.ipynb
+++ b/tools/cross_validation/create_cross_validation_configs.ipynb
@@ -129,15 +129,22 @@
    "source": [
     "date_format = '%d/%m/%Y'\n",
     "splits = {\n",
-    "    year: \n",
-    "    {\n",
-    "        'train': [[FIRST_DATE, f'31/12/{year-2}'], [f'01/01/{year+2}', LAST_DATE]],\n",
-    "        'test':  [[f'01/01/{year}', f'31/12/{year}']],\n",
-    "    } for year in TEST_YEARS\n",
+    "    year: {\n",
+    "        'train': [\n",
+    "            [FIRST_DATE, f'31/12/{year - 2}'],\n",
+    "            [f'01/01/{year + 2}', LAST_DATE],\n",
+    "        ],\n",
+    "        'test': [[f'01/01/{year}', f'31/12/{year}']],\n",
+    "    }\n",
+    "    for year in TEST_YEARS\n",
     "}\n",
     "\n",
+    "\n",
     "def _compare_dates_gt(datestr1: str, datestr2: str) -> bool:\n",
-    "    return pd.to_datetime(datestr1, dayfirst=True) > pd.to_datetime(datestr2, dayfirst=True)\n",
+    "    return pd.to_datetime(datestr1, dayfirst=True) > pd.to_datetime(\n",
+    "        datestr2, dayfirst=True\n",
+    "    )\n",
+    "\n",
     "\n",
     "# Remove periods that are outside of the date range.\n",
     "def _filter_date_tuples(data: dict) -> dict:\n",
@@ -150,11 +157,13 @@
     "        for inner_key, date_tuples in inner_dict.items():\n",
     "            # Use a list comprehension to keep only valid tuples\n",
     "            filtered_tuples = [\n",
-    "                (d1, d2) for d1, d2 in date_tuples if not _compare_dates_gt(d1, d2)\n",
+    "                (d1, d2)\n",
+    "                for d1, d2 in date_tuples\n",
+    "                if not _compare_dates_gt(d1, d2)\n",
     "            ]\n",
     "            filtered_inner_dict[inner_key] = filtered_tuples\n",
     "        filtered_data[outer_key] = filtered_inner_dict\n",
-    "    return filtered_data               "
+    "    return filtered_data"
    ]
   },
   {
@@ -222,7 +231,7 @@
     "        A nested dictionary with the organized file paths.\n",
     "    \"\"\"\n",
     "    organized_files = {}\n",
-    "    \n",
+    "\n",
     "    # Updated regex to capture the prefix and type (train/test)\n",
     "    pattern = re.compile(r'(?:(.+)_)?(train|test)\\.txt')\n",
     "\n",
@@ -230,15 +239,15 @@
     "        if file_path.is_file() and file_path.suffix == '.txt':\n",
     "            match = pattern.match(file_path.name)\n",
     "            if match:\n",
-    "                prefix = match.group(1)     # e.g., 'basin_a', 'another_basin'\n",
+    "                prefix = match.group(1)  # e.g., 'basin_a', 'another_basin'\n",
     "                file_type = match.group(2)  # 'train' or 'test'\n",
     "\n",
     "                if prefix not in organized_files:\n",
     "                    organized_files[prefix] = {}\n",
-    "                \n",
+    "\n",
     "                # Store the Path object\n",
     "                organized_files[prefix][file_type] = file_path\n",
-    "                \n",
+    "\n",
     "    return organized_files"
    ]
   },
@@ -286,7 +295,7 @@
     "    Deletes all files and subdirectories within the specified directory.\n",
     "    \"\"\"\n",
     "    if not directory_path.is_dir():\n",
-    "        print(f\"Error: {directory_path} is not a directory.\")\n",
+    "        print(f'Error: {directory_path} is not a directory.')\n",
     "        return\n",
     "\n",
     "    for item in directory_path.iterdir():\n",
@@ -304,10 +313,10 @@
    "outputs": [],
    "source": [
     "def create_cross_validation_config_files(\n",
-    "    base_config_path: Path, \n",
+    "    base_config_path: Path,\n",
     "    output_dir: Path,\n",
     "    basin_lists: dict[str, dict[str, Path]] | None = None,\n",
-    "    time_splits: dict[str, dict[str, list[str]]] | None = None\n",
+    "    time_splits: dict[str, dict[str, list[str]]] | None = None,\n",
     "):\n",
     "    \"\"\"Create configs for spatiotemporal cross validation splits.\n",
     "\n",
@@ -315,19 +324,19 @@
     "    function will create config files that implement a cross product of the basin (space)\n",
     "    and time splits. These config files are stored in `output_directory` and the\n",
     "    `run_scheduler.py` script in this library can be used to run the whole set.\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    base_config_path : Path\n",
     "        Path to a base config file (.yml)\n",
-    "    output_dir : Path \n",
+    "    output_dir : Path\n",
     "        Path to a folder where the generated configs will be stored\n",
     "    basin_splits: dict[str, dict[str, list[str]]] | None\n",
-    "    \n",
+    "\n",
     "    time_splits: dict[str, dict[str, list[str]]] | None\n",
-    "        \n",
+    "\n",
     "    \"\"\"\n",
-    "    # since the output directory is intended to represent one cross-validation experiment, \n",
+    "    # since the output directory is intended to represent one cross-validation experiment,\n",
     "    # delete any configs that already exist.\n",
     "    if output_dir.is_dir():\n",
     "        delete_all_contents(output_dir)\n",
@@ -343,7 +352,7 @@
     "\n",
     "    if time_splits is None:\n",
     "        time_splits = {'dummy': []}\n",
-    "        \n",
+    "\n",
     "    # load base config as dictionary\n",
     "    base_config = Config(base_config_path)\n",
     "\n",
@@ -352,60 +361,93 @@
     "\n",
     "    # iterate over each possible combination of basin list and time split\n",
     "    for basin_split in basin_lists:\n",
-    "        \n",
     "        # update basin list files\n",
     "        if basin_split != 'dummy':\n",
-    "            \n",
     "            update_config = basin_lists[basin_split]\n",
-    "            \n",
+    "\n",
     "            if 'train' in update_config:\n",
     "                update_config['train_basin_file'] = update_config.pop('train')\n",
-    "            if 'validation' in update_config:            \n",
-    "                update_config['validation_basin_file'] = update_config.pop('validation')\n",
+    "            if 'validation' in update_config:\n",
+    "                update_config['validation_basin_file'] = update_config.pop(\n",
+    "                    'validation'\n",
+    "                )\n",
     "            if 'test' in update_config:\n",
     "                update_config['test_basin_file'] = update_config.pop('test')\n",
-    "            if any([bf not in update_config for bf in ['train_basin_file', 'test_basin_file']]):\n",
-    "                raise ValueError('Basin list inner dictionary must contain files for train and test. Validation is optional.')\n",
-    "            \n",
+    "            if any(\n",
+    "                [\n",
+    "                    bf not in update_config\n",
+    "                    for bf in ['train_basin_file', 'test_basin_file']\n",
+    "                ]\n",
+    "            ):\n",
+    "                raise ValueError(\n",
+    "                    'Basin list inner dictionary must contain files for train and test. Validation is optional.'\n",
+    "                )\n",
+    "\n",
     "            base_config.update_config(update_config)\n",
     "\n",
     "        for time_split in time_splits:\n",
-    "\n",
     "            # update experiment name with split IDs\n",
     "            split_name = f'basin_split_{basin_split}_time_split_{time_split}'\n",
     "            name = f'{EXPERIMENT_NAME}_{split_name}'\n",
-    "            base_config.update_config({\"experiment_name\": name})\n",
+    "            base_config.update_config({'experiment_name': name})\n",
     "\n",
     "            # update period dates\n",
     "            if time_split != 'dummy':\n",
-    "                \n",
     "                update_config = time_splits[time_split]\n",
-    "                \n",
+    "\n",
     "                if 'train' in update_config:\n",
-    "                    update_config['train_start_date'] = [dates[0] for dates in update_config['train']]\n",
-    "                    update_config['train_end_date'] = [dates[1] for dates in update_config.pop('train')]\n",
+    "                    update_config['train_start_date'] = [\n",
+    "                        dates[0] for dates in update_config['train']\n",
+    "                    ]\n",
+    "                    update_config['train_end_date'] = [\n",
+    "                        dates[1] for dates in update_config.pop('train')\n",
+    "                    ]\n",
     "                if 'test' in update_config:\n",
-    "                    update_config['test_start_date'] = [dates[0] for dates in update_config['test']]\n",
-    "                    update_config['test_end_date'] = [dates[1] for dates in update_config.pop('test')]                 \n",
-    "                if any([tp not in update_config for tp in ['train_start_date', 'train_end_date', 'test_start_date', 'test_end_date']]):\n",
-    "                    raise ValueError('Time split inner dictionary must contain start and end dates for train and test. Validation is optional.')\n",
-    "      \n",
-    "                if 'validation' in update_config:            \n",
-    "                    update_config['validation_start_date'] = [dates[0] for dates in update_config['validation']]\n",
-    "                    update_config['validation_end_date'] = [dates[1] for dates in update_config.pop('validation')]\n",
+    "                    update_config['test_start_date'] = [\n",
+    "                        dates[0] for dates in update_config['test']\n",
+    "                    ]\n",
+    "                    update_config['test_end_date'] = [\n",
+    "                        dates[1] for dates in update_config.pop('test')\n",
+    "                    ]\n",
+    "                if any(\n",
+    "                    [\n",
+    "                        tp not in update_config\n",
+    "                        for tp in [\n",
+    "                            'train_start_date',\n",
+    "                            'train_end_date',\n",
+    "                            'test_start_date',\n",
+    "                            'test_end_date',\n",
+    "                        ]\n",
+    "                    ]\n",
+    "                ):\n",
+    "                    raise ValueError(\n",
+    "                        'Time split inner dictionary must contain start and end dates for train and test. Validation is optional.'\n",
+    "                    )\n",
+    "\n",
+    "                if 'validation' in update_config:\n",
+    "                    update_config['validation_start_date'] = [\n",
+    "                        dates[0] for dates in update_config['validation']\n",
+    "                    ]\n",
+    "                    update_config['validation_end_date'] = [\n",
+    "                        dates[1] for dates in update_config.pop('validation')\n",
+    "                    ]\n",
     "                elif 'validation_start_date' not in update_config:\n",
-    "                    update_config['validation_start_date'] = update_config['test_start_date']\n",
-    "                    update_config['validation_end_date'] = update_config['test_end_date']\n",
-    "                \n",
+    "                    update_config['validation_start_date'] = update_config[\n",
+    "                        'test_start_date'\n",
+    "                    ]\n",
+    "                    update_config['validation_end_date'] = update_config[\n",
+    "                        'test_end_date'\n",
+    "                    ]\n",
+    "\n",
     "                base_config.update_config(update_config)\n",
     "\n",
     "            # write new config to output directory\n",
-    "            base_config.dump_config(output_dir, f\"{name}.yml\")\n",
-    "            all_configs.append(output_dir/f\"{name}.yml\")\n",
-    "        \n",
+    "            base_config.dump_config(output_dir, f'{name}.yml')\n",
+    "            all_configs.append(output_dir / f'{name}.yml')\n",
+    "\n",
     "    return all_configs\n",
     "\n",
-    "    print(f\"Finished. Configs are stored in {output_dir}\")"
+    "    print(f'Finished. Configs are stored in {output_dir}')"
    ]
   },
   {
@@ -424,10 +466,10 @@
    ],
    "source": [
     "all_configs = create_cross_validation_config_files(\n",
-    "    base_config_path=base_config_path, \n",
+    "    base_config_path=base_config_path,\n",
     "    output_dir=config_file_dir,\n",
     "    basin_lists=basin_lists,\n",
-    "    time_splits=time_splits\n",
+    "    time_splits=time_splits,\n",
     ")\n",
     "print(f'{len(all_configs)} configs were generated.')"
    ]
@@ -450,7 +492,9 @@
    "source": [
     "# Preload all attributes.\n",
     "cfg = Config(all_configs[0])\n",
-    "attributes_df = load_caravan_attributes(data_dir=Path(cfg.statics_data_dir))[cfg.static_attributes].to_dataframe()"
+    "attributes_df = load_caravan_attributes(data_dir=Path(cfg.statics_data_dir))[\n",
+    "    cfg.static_attributes\n",
+    "].to_dataframe()"
    ]
   },
   {
@@ -481,7 +525,7 @@
     "    cfg = Config(config_path)\n",
     "    basins = load_basin_file(cfg.train_basin_file)\n",
     "    basin_attributes_df = attributes_df.loc[basins]\n",
-    "    variances = basin_attributes_df.var()    \n",
+    "    variances = basin_attributes_df.var()\n",
     "    unsafe_attributes.extend(variances[variances == 0].index.tolist())"
    ]
   },
